--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,12 @@
-# Compiled class file
+#Intellij IDEA files
+*.iml
+/out
+/.idea
+#scala files
 *.class
+/project
 
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+*.DS_Store
+.DS_Store
+target
+metastore_db
